# ferrumec

./: .gitignore  Cargo.toml  README.md  admin-use-case.py  auth.py  booking.py  catalog.py  client-use-case.py  compose.debug.yaml  compose.yaml  docker-compose.yaml  ferrumec.conf  ferrumec.py  inventory.py  main.py  messages.py  orders.py  start.sh  stop.sh  tenant.py  worker.py
.github/workflows/: main.yml
src/: bootstrap.py  email.rs  lib.rs  permissions.rs
src/cache/: layered.rs  mod.rs
src/crypto/: common.rs  hs256.rs  mod.rs  rs256.rs  signer_core.rs
src/di/: async_from_env.rs  context.rs  error.rs  from_env.rs  handler.rs  macros.rs  mod.rs  registry.rs  runner.rs  si.rs  simple.rs  tuple.rs
src/middleware/: auth.rs
